syntax = "proto3";
// 任务相关协议定义

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;
option cc_generic_services = true;

option go_package = "github.com/atframework/atsf4g-go/service-lobbysvr/protocol/public/protocol/pbdesc";

import "protocol/pbdesc/com.struct.quest.proto";

package proy;

// 领取任务奖励请求
message CSQuestReceiveRewardReq {
  repeated int32 quest_ids = 1;  // 任务ID列表
}

// 领取任务奖励响应
message SCQuestReceiveRewardRsp {
  repeated DuserQuestRewardData rewards = 1;
}

// 客户群请求更新任务状态
message CSQuestUpdateStatusReq {}

// 客户群请求更新任务状态
message SCQuestUpdateStatusRsp {}